# VibeProxy

./: # DeepWiki Q&A with Code Context for Rep.md  .gitignore  .preflight_copilot_results.txt  A0-VIBEPROXY-INTEGRATION.md  CHECKLIST.md  CLAUDE.md  Launch-Droid-Fixed.ps1  Launch_Admin_Template.bat  Launch_Debug.bat  Launch_Droid_Fixed.bat  Launch_QuickStart.bat  Launch_Simple.bat  Launch_VibeProxy_Complete.bat  Launch_VibeProxy_Complete_Debug.bat  Launch_VibeProxy_Manager.bat  QUICK_LAUNCH.md  QUICK_START.md  README.md  SETUP_GUIDE.md  VibeProxy-Manager.ps1  factory-config-example.json  mac-vibeproxy-status.sh  pyproject.toml  requirements.txt  run.bat  run.py  ssh-tunnel-intelligent.py  ssh-tunnel-vibeproxy.ps1  start-vibeproxy-tunnel.bat  test-launcher.bat  vibeproxy-config.example.json  vibeproxy-config.json
.claude/: .hook-format.state  session-log.md
.serena/: project.yml
configs/: a0-claude-3-5-haiku-20241022.json  a0-claude-3-7-sonnet-20250219.json  a0-claude-haiku-4-5-20251001.json  a0-claude-haiku-4-5.json  a0-claude-opus-4-1-20250805.json  a0-claude-opus-4-1.json  a0-claude-opus-4-20250514.json  a0-claude-opus-4-5-20251101.json  a0-claude-opus-4-5.json  a0-claude-sonnet-4-20250514.json  a0-claude-sonnet-4-5-20250929.json  a0-claude-sonnet-4-5.json  a0-claude-sonnet-4.json  a0-gemini-2-5-flash-lite.json  a0-gemini-2-5-flash.json  a0-gemini-2-5-pro.json  a0-gemini-3-flash-preview.json  a0-gemini-3-pro-preview.json  a0-gpt-4-1.json  a0-gpt-5-1-codex-max.json  a0-gpt-5-1-codex-mini.json  a0-gpt-5-1-codex.json  a0-gpt-5-1.json  a0-gpt-5-2-codex.json  (+20 more)
(+61 files in other folders)
