[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vibeproxy-manager"
version = "1.0.0"
description = "Professional TUI for managing VibeProxy and Agent Zero"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "VibeProxy Team" }
]
dependencies = [
    "textual>=0.47.0",
    "rich>=13.0.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
]

[project.scripts]
vibeproxy-manager = "vibeproxy_manager:main"
vpm = "vibeproxy_manager:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "textual-dev>=1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["vibeproxy_manager"]
